rns-lang/tests/snapshots/parser-directive_header_trailing_tokens-dot_class.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld .class AnotherClass
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: trailing characters after 'HelloWorld'
   ╭─[ test_data/integration/parser/directive_header_trailing_tokens/dot_class.ja:1:26 ]
   │
 1 │ .class public HelloWorld .class AnotherClass
   │                          ─────────┬─────────  
   │                                   ╰─────────── Class headers must end after the name.
   │ 
   │ Note: The class definition should end after the class name 'HelloWorld'.
   │       Unexpected tokens after class name. Consider starting a new line for the next directive.
───╯
